# HotWheelsGym

./: .gitignore  LICENSE  pyproject.toml  readme.md  test.py  training.md
HotWheelsGym/: HotWheels.py  HotWheelsEnv.py  __init__.py  enums.py
HotWheelsGym/HotWheelsStuntTrackChallenge-GbAdvance/: black_widows_nest_multi.json  black_widows_nest_single.json  black_widows_nest_single.state  dino_boneyard_multi.json  dino_boneyard_single.json  dino_boneyard_single.state  fire_mountain_multi.json  fire_mountain_multi.state  fire_mountain_single.json  fire_mountain_single.state  gator_forest_multi.json  gator_forest_multi.state  gator_forest_single.json  gator_forest_single.state  insect_hive_single.json  insect_hive_single.state  jungle_snakepit_multi.json  jungle_snakepit_multi.state  jungle_snakepit_single.json  jungle_snakepit_single.state  metadata.json  monsters_of_the_deep_multi.json  monsters_of_the_deep_single.json  monsters_of_the_deep_single.state  satellite_mission_multi.json  satellite_mission_multi.state  satellite_mission_single.json  satellite_mission_single.state  script.lua  solar_strip_multi.json  solar_strip_multi.state  solar_strip_single.json  solar_strip_single.state  trex_valley_multi.json  trex_valley_single.json  volcano_battle_multi.json  volcano_battle_multi.state  volcano_battle_single.json  volcano_battle_single.state  whiteskull_cliffs_multi.json  (+2 more)
test/: test.py
training_scripts/: eval_policy.py  train_ppo.py
training_scripts/tools/: __init__.py  config.py  random_name_generator.py
training_scripts/tools/evaluation/: __init__.py  evalCallback.py  evaluate_policy.py  util.py
training_scripts/tools/wrappers/: __init__.py  action.py  hotwheels.py  interactive.py  obs.py  reward.py  viewer.py
zoo/dbm_basic/: config.yml
zoo/tvm_basic/: config.yml
zoo/tvs_basic/: config.yml
